update build.gradle for test